test/tests/stages/7_compound_statements/valid/declaration_only.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  ;
  {
  int
  identifier(b)
  =
  identifier(a)
  =
  const int(1)
  ;
  }
  return
  identifier(a)
  ;
  }
