test/tests/stages/7_compound_statements/invalid_semantics/use_before_declare.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  ;
  {
  identifier(b)
  =
  const int(10)
  ;
  }
  int
  identifier(b)
  ;
  return
  identifier(b)
  ;
  }
